Gradle's build directory is known by the script beside it, so a package named build is source
Every walker that pruned build output did it by name — the guard text lane (TextView, TextFiles),
jk format (WalkSkip, FormatSources), the path-source fingerprint, two closure tests — and a
directory named build anywhere in the tree was output to them. cc.jumpkick.plugin.build has been
invisible to the text lane and unformatted since it was written; the CLI's build family had to be
renamed to be seen at all. One predicate in :host now decides: build/ is Gradle's where Gradle puts
it, beside a build or settings script, and a build anywhere else is walked like any directory.
The 19 files under plugin/build the formatter had never reached are formatted here.